tests/baselines/reference/nodeModulesAllowJsTopLevelAwait(module=node16).errors.txt
index.js(2,11): error TS1378: Top-level 'await' expressions are only allowed when the 'module' option is set to 'es2022', 'esnext', 'system', 'node16', or 'nodenext', and the 'target' option is set to 'es2017' or higher.
index.js(4,5): error TS1432: Top-level 'for await' loops are only allowed when the 'module' option is set to 'es2022', 'esnext', 'system', 'node16', or 'nodenext', and the 'target' option is set to 'es2017' or higher.
subfolder/index.js(2,11): error TS1309: The current file is a CommonJS module and cannot use 'await' at the top level.
subfolder/index.js(4,5): error TS1309: The current file is a CommonJS module and cannot use 'await' at the top level.


==== subfolder/index.js (2 errors) ====
    // cjs format file
    const x = await 1;
              ~~~~~
!!! error TS1309: The current file is a CommonJS module and cannot use 'await' at the top level.
    export {x};
    for await (const y of []) {}
        ~~~~~
!!! error TS1309: The current file is a CommonJS module and cannot use 'await' at the top level.
==== index.js (2 errors) ====
    // esm format file
    const x = await 1;
              ~~~~~
!!! error TS1378: Top-level 'await' expressions are only allowed when the 'module' option is set to 'es2022', 'esnext', 'system', 'node16', or 'nodenext', and the 'target' option is set to 'es2017' or higher.
    export {x};
    for await (const y of []) {}
        ~~~~~
!!! error TS1432: Top-level 'for await' loops are only allowed when the 'module' option is set to 'es2022', 'esnext', 'system', 'node16', or 'nodenext', and the 'target' option is set to 'es2017' or higher.
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }